--- a/index.html
+++ b/index.html
@@ -32,11 +32,11 @@
     <div class="gallery-wrapper" id="galleryWrapper">
         <!-- Horizontal Image Gallery -->
         <div class="gallery-container" id="galleryContainer">
-            <img src="static/img/1_1.jpg" alt="Image 1" class="gallery-img" onclick="showInfo(1, this)" data-id="1">
-            <img src="static/img/2_1.jpg" alt="Image 2" class="gallery-img" onclick="showInfo(2, this)" data-id="2">
-            <img src="static/img/3_1.jpg" alt="Image 3" class="gallery-img" onclick="showInfo(3, this)" data-id="3">
-            <img src="static/img/4_1.jpg" alt="Image 4" class="gallery-img" onclick="showInfo(4, this)" data-id="4">
-            <img src="static/img/5_1.jpg" alt="Image 5" class="gallery-img" onclick="showInfo(5, this)" data-id="5">
+            <img src="../img/1_1.jpg" alt="Image 1" class="gallery-img" onclick="showInfo(1, this)" data-id="1">
+            <img src="../img/2_1.jpg" alt="Image 2" class="gallery-img" onclick="showInfo(2, this)" data-id="2">
+            <img src="../img/3_1.jpg" alt="Image 3" class="gallery-img" onclick="showInfo(3, this)" data-id="3">
+            <img src="../img/4_1.jpg" alt="Image 4" class="gallery-img" onclick="showInfo(4, this)" data-id="4">
+            <img src="../img/5_1.jpg" alt="Image 5" class="gallery-img" onclick="showInfo(5, this)" data-id="5">
         </div>
         <!-- Info Container (Hidden Initially) -->
         <!-- Info Container with Buttons -->
