--- a/index.html
+++ b/index.html
@@ -9,6 +9,15 @@
     <link rel="stylesheet" href="static/index.css">
 </head>
 
+<style>
+    .gallery-img {
+    border: 2px solid red;  /* Just to make sure the images are visible */
+    display: block;
+    margin: 10px auto;
+}
+
+</style>
+
 <body>
     <div class="hero-container" id="heroContainer">
         <video autoplay muted loop id="heroVideo" class="hero-video">
