--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <div class="gallery-wrapper" id="galleryWrapper">
         <!-- Horizontal Image Gallery -->
         <div class="gallery-container" id="galleryContainer">
-            <img src="https://raw.githubusercontent.com/jeem-31/ITEL203_StudentPortfolio_Beato-Gahi-Jaqueca-Reyes-Ybardolaza/master/img/1_1.jpg" alt="Image 1" class="gallery-img" alt="Image 1" class="gallery-img" alt="Image 1" class="gallery-img" alt="Image 1" class="gallery-img" onclick="showInfo(1, this)" data-id="1">
+            <img src="https://raw.githubusercontent.com/jeem-31/ITEL203_StudentPortfolio_Beato-Gahi-Jaqueca-Reyes-Ybardolaza/master/img/1_1.jpg" alt="Image 1" class="gallery-img" onclick="showInfo(1, this)" data-id="1">
             <img src="https://raw.githubusercontent.com/jeem-31/ITEL203_StudentPortfolio_Beato-Gahi-Jaqueca-Reyes-Ybardolaza/master/img/2_1.jpg" alt="Image 2" class="gallery-img" onclick="showInfo(2, this)" data-id="2">
             <img src="https://raw.githubusercontent.com/jeem-31/ITEL203_StudentPortfolio_Beato-Gahi-Jaqueca-Reyes-Ybardolaza/master/img/3_1.jpg" alt="Image 3" class="gallery-img" onclick="showInfo(3, this)" data-id="3">
             <img src="https://raw.githubusercontent.com/jeem-31/ITEL203_StudentPortfolio_Beato-Gahi-Jaqueca-Reyes-Ybardolaza/master/img/4_1.jpg" alt="Image 4" class="gallery-img" onclick="showInfo(4, this)" data-id="4">
