--- a/index.html
+++ b/index.html
@@ -34,10 +34,10 @@
         <!-- Horizontal Image Gallery -->
         <div class="gallery-container" id="galleryContainer">
             <img src="https://jeem-31.github.io/ITEL203_StudentPortfolio_Beato-Gahi-Jaqueca-Reyes-Ybardolaza/img/1_1.JPG" alt="Image 1" class="gallery-img" onclick="showInfo(1, this)" data-id="1">
-            <img src="https://jeem-31.github.io/ITEL203_StudentPortfolio_Beato-Gahi-Jaqueca-Reyes-Ybardolaza/img/2_1.jpg" alt="Image 2" class="gallery-img" onclick="showInfo(2, this)" data-id="2">
-            <img src="https://jeem-31.github.io/ITEL203_StudentPortfolio_Beato-Gahi-Jaqueca-Reyes-Ybardolaza/img/3_1.jpg" alt="Image 3" class="gallery-img" onclick="showInfo(3, this)" data-id="3">
-            <img src="https://jeem-31.github.io/ITEL203_StudentPortfolio_Beato-Gahi-Jaqueca-Reyes-Ybardolaza/img/4_1.jpg" alt="Image 4" class="gallery-img" onclick="showInfo(4, this)" data-id="4">
-            <img src="https://jeem-31.github.io/ITEL203_StudentPortfolio_Beato-Gahi-Jaqueca-Reyes-Ybardolaza/img/5_1.jpg" alt="Image 5" class="gallery-img" onclick="showInfo(5, this)" data-id="5">
+            <img src="https://jeem-31.github.io/ITEL203_StudentPortfolio_Beato-Gahi-Jaqueca-Reyes-Ybardolaza/img/2_1.JPG" alt="Image 2" class="gallery-img" onclick="showInfo(2, this)" data-id="2">
+            <img src="https://jeem-31.github.io/ITEL203_StudentPortfolio_Beato-Gahi-Jaqueca-Reyes-Ybardolaza/img/3_1.JPG" alt="Image 3" class="gallery-img" onclick="showInfo(3, this)" data-id="3">
+            <img src="https://jeem-31.github.io/ITEL203_StudentPortfolio_Beato-Gahi-Jaqueca-Reyes-Ybardolaza/img/4_1.JPG" alt="Image 4" class="gallery-img" onclick="showInfo(4, this)" data-id="4">
+            <img src="https://jeem-31.github.io/ITEL203_StudentPortfolio_Beato-Gahi-Jaqueca-Reyes-Ybardolaza/img/5_1.JPG" alt="Image 5" class="gallery-img" onclick="showInfo(5, this)" data-id="5">
         </div>
         <!-- Info Container (Hidden Initially) -->
         <!-- Info Container with Buttons -->
